20090514 mnemogogo-0.6.5
* Java library now only asks for READ permission in FindCardDir.
* Fix a major start_time corruption bug when importing.
* Encode image filenames (with punycode) to avoid problems.
* Bundle the html and png files into single file that is unpacked
  into the MIDlet's resource directory. This should make exports
  a bit faster (less files), but more importantly it should
  reduce the number of security confirmation prompts.

20090513 mnemogogo-0.6.4
* Resize images in a temporary directory.
* Fix a major bug in the mapping of card ids to html filenames.
* Adjust image scaling to better fill screen in MnemoJoJo export.

20090512 mnemogogo-0.6.3
* Speed up loading/saving databases in Java library.
* Map more color names.
* Tidy up the HexCsv exporters.

20090511 mnemogogo-0.6.2
* Bug fixes in image manipulation routines.
* Rename HtmlCsv to HexCsv.
* Add an export interface specific to MnemoJoJo.

20090508 mnemogogo-0.6.1
* Add image scaling / png conversion.
* Fix bugs in the MnemoGoGo import and export routines.

20090507 mnemogogo-0.6.0
* Fix many bugs.
* Remove global variables from the C library.
* Implement the library in Java.
* Provide a plain text exporter.

20090422 mnemogogo-0.5.1
* Fix a small bug in mobile/htmlcsv: shiftforgottentonew().

20090422 mnemogogo-0.5.0
Initial development release.
