@@ -1,3 +1,7 @@
+20090517 mnemogogo-1.0.0
+* Fix the scheduling of 0/1 cards.
+* Add card functions for displaying statistics.
+
 20090514 mnemogogo-0.6.5
 * Java library now only asks for READ permission in FindCardDir.
 * Fix a major start_time corruption bug when importing.
